chore: define run steps

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,7 +8,7 @@
 
 	<title>Every planet procedural</title>
 	<link rel="stylesheet" href="style.css">
-
+	
 	<!-- https://github.com/josephg/noisejs -->
 	<script src="perlin.js"></script>
 	<script src="seedrandom.min.js"></script>
@@ -25,7 +24,7 @@
 	<div class="controls">
 		<a href="" id="permalink">permalink</a>
 		&middot;
-		<a href="/proceduralart" id="discovernew">discover new planet</a>
+		<a href="." id="discovernew">discover new planet</a>
 	</div>
 
 	<script src="script.js"></script>
