--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=1280" />
-	<meta name="description" content="A procedural pixelart generator. Makes images of alien planets, inspired by No Man's Sky."/>
+	<meta name="description"
+		content="A procedural pixelart generator. Makes images of alien planets, inspired by No Man's Sky." />
 
 	<title>Every planet procedural</title>
 	<link rel="stylesheet" href="style.css">
-	
+
 	<!-- https://github.com/josephg/noisejs -->
 	<script src="perlin.js"></script>
 	<script src="seedrandom.min.js"></script>
@@ -17,9 +18,6 @@
 </head>
 
 <body>
-	<div class="title">
-		<img src="title.png" alt="Every Planet Procedural">
-	</div>
 	<canvas id="myCanvas" class="pixelated" width="640" height="360"></canvas>
 	<div class="controls">
 		<a href="" id="permalink">permalink</a>
