refactor: remove unnecessary render hint

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<canvas id="myCanvas" class="pixelated" width="640" height="360"></canvas>
+	<canvas id="myCanvas" width="640" height="360"></canvas>
 	<div class="controls">
 		<a href="" id="permalink">permalink</a>
 		&middot;
