--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<canvas id="canvas" width="320" height="180"></canvas>
+	<canvas width="640" height="360" id="canvas"></canvas>
 
 	<div class="controls">
 		<a href="" id="permalink">Permalink</a>
